--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,6 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
-/config/initializers/secret_token.rb
+
+# Ignore application configuration
+/config/application.yml
